--- a/index.html
+++ b/index.html
@@ -544,7 +544,7 @@
     <p>
       <b>Supervisor:</b> Dr. A.B.M. Alim Al Islam  <br/>
       <b>Research topics:</b> Data visualization, Human-centered computing, Interactive computing<br/>
-      <b>Artifact:</b> User study; <b>  <b>Frameworks: </b> ReactJS; <br/>
+      <b>Artifact:</b> User study;  <b>Frameworks: </b> ReactJS; <br/>
       <b>My contribution: </b> Making the whole user interaface single-handedly.<br/>
       
     </p>
