Adding ongoing researches finallyyy

--- a/index.html
+++ b/index.html
@@ -545,7 +545,7 @@
       <b>Supervisor:</b> Dr. A.B.M. Alim Al Islam  <br/>
       <b>Research topics:</b> Data visualization, Human-centered computing, Interactive computing<br/>
       <b>Artifact:</b> User study;  <b>Frameworks: </b> ReactJS; <br/>
-      <b>My contribution: </b> Making the whole user interaface single-handedly.<br/>
+      <b>My contribution: </b> Developing the whole user interface single-handedly.<br/>
       
     </p>
     
