Adding ongoing researches finally yaayayay

--- a/index.html
+++ b/index.html
@@ -559,7 +559,7 @@
     <p>
       <b>Supervisor:</b> Dr. A.B.M. Alim Al Islam  <br/>
       <b>Research topics:</b>  Human-centered computing, Social computing, Social media, Exploratory data analysis <br/>
-      <b>Artifact:</b> Questionnaire; <b>Analysis: Cramer's V and thematic analysis</b>   <b>Data:</b> Both survey and interview study; 
+      <b>Artifact:</b> Questionnaire; <b>Analysis: </b>  Cramer's V and thematic analysis  <b>Data:</b> Both survey and interview study; 
       <b>Participant:</b> People who sell and buy things online from Bangladesh; <br/>
       <b>My contribution: </b> Took survey of the sellers, contributed to themetic analysis, did lterature review and contributed to the academic writing.<br/>
 
