--- a/index.html
+++ b/index.html
@@ -468,6 +468,9 @@
   <div class="status-box" data-status="published">
     <label>Published</label>
   </div>
+  <div class="status-box" data-status="under-review">
+    <label>Under review</label>
+  </div>
   <div class="status-box" data-status="completed">
     <label>Completed</label>
   </div>
@@ -493,7 +496,7 @@
     <span class="year"> Sep 2020-Dec 2021</span>
   </div>
 
-  <div class="work-box" data-status="published">
+  <div class="work-box" data-status="under-review">
     <h4> A COVID Story: Corresponding Perspectives Dissection for COVID-19 Pandemic</h4>
     <p> Accepted to High-Confidence Computing Journal 2024 <br/><br/>
       <b>Supervisor:</b> Dr. A.B.M. Alim Al Islam  <br/>
@@ -503,15 +506,13 @@
       <b>Analysis:</b> Pearson correlation; <b>Tech:</b> Pandas, Numpy, Scikit-learn, NetworkX  <br/>
       <b>My contribution: </b> Made the questionnaire, circulated it, did literature review and contributed to the academic writing.
     </p>
-    <a href="https://drive.google.com/file/d/1QX8qGpr77o2e7J-9txiFyJp085hZYcPo/view" class="btn btn-primary" target="_blank">PDF</a>
     <span class="year">Dec 2020- Jul 2023</span>
   </div>
 
 
 
-  <div class="work-box" data-status="completed">
+  <div class="work-box"   data-status="under-review">
     <h4>Women-Friendly: Exploring Perspectives and Experiences of Women Owners of Small-Scale Online Business Ventures in Bangladesh </h4>
-    <p><em> Under review</em><br/>
       <b>Supervisor:</b> Dr. A.B.M. Alim Al Islam  <br/>
       <b>Research topics:</b>  Human-centered computing, Empirical studies in collaborative and social computing <br/>
       <b>Artifact:</b> Questionnaire; <b>Method:</b> Interview study;  <b>Data:</b> Interview;  
