--- a/index.html
+++ b/index.html
@@ -599,8 +599,8 @@
     <span class="year">September 2024-now</span>
   </div>
   <div class="work-box" data-status="ongoing">
-    <h4> uReporter- An Open Public Reporting System </h4> <a href="https://ureporter.cse.buet.ac.bd/" class="btn btn-primary" target="_blank">LINK</a>
-      <b>Supervisor:</b> Dr. A.B.M. Alim Al Islam  <br/>
+    <h4> uReporter- An Open Public Reporting System  <a href="https://ureporter.cse.buet.ac.bd/" class="btn btn-primary" target="_blank">LINK</a></h4>
+    <br/>  <b>Supervisor:</b> Dr. A.B.M. Alim Al Islam  <br/>
       <b>Research topics:</b>  Human-centered computing, Social computing<br/>
       <b>My contribution: </b> Contributed to host the website.<br/>
         
