final v3 last etai

--- a/index.html
+++ b/index.html
@@ -115,7 +115,8 @@
                       <li><span class="news-date" data-month="July 10" data-year="2024"></span> <span class="news-description">Joined as a fulltime Research Assistant in Next-generation Computing (NeC) Research Group, Department of CSE at BUET.</span></li>
                       <li><span class="news-date" data-month="July 01" data-year="2024"></span> <span class="news-description"> Graduated with a BSc degree from the Department of CSE at BUET.      </span></li>
                       <li><span class="news-date" data-month="June 29" data-year="2024"></span> <span class="news-description">Undergraduate thesis defended</span></li>
-                      <li><span class="news-date" data-month="April 30" data-year="2024"></span> <span class="news-description">"A COVID Story: Corresponding Perspectives Dissection for COVID-19 Pandemic" was accepted to High-Confidence Computing Journal 2024</span></li>
+                      <!-- <li><span class="news-date" data-month="April 30" data-year="2024"></span> <span class="news-description">"A COVID Story: Corresponding Perspectives Dissection for COVID-19 Pandemic" was accepted to High-Confidence Computing Journal 2024</span></li>
+                    </ul> -->
                     </ul>
                   </div>
                 </div>
