chi-lbw-added-fixed-fw

--- a/index.html
+++ b/index.html
@@ -687,7 +687,8 @@
 
 
 
-  <div>
+  
+  <div class="work-box" data-status="under-review">
     <h4> Enhancing Usability of a Groundwater Level Visualization Dashboard</h4>
     <p>
       <b>Supervisor:</b> Dr. A.B.M. Alim Al Islam  <br/>
@@ -700,7 +701,8 @@
     <span class="year">July 2024- Now</span>
   </div>
 
-  <div>
+ 
+  <div class="work-box" data-status="under-review">
     <h4>Sentiments over Post-Revolution Street Wall Arts in Dhaka</h4>
     <p>
       <b>Supervisor:</b> Dr. A.B.M. Alim Al Islam  <br/>
@@ -713,7 +715,8 @@
     <span class="year">September 2024- Now</span>
   </div>
 
-  <div>
+  
+  <div class="work-box" data-status="under-review">
     <h4>Beyond the Blackout: Qualitative Insights and Sentiment Analysis on the Impact, Adaptation, and Design Solutions During the Recent Internet Shutdown in Bangladesh</h4>
     <p>
       <b>Supervisor:</b> Dr. A.B.M. Alim Al Islam  <br/>
