chi lbw published 2 paper

--- a/index.html
+++ b/index.html
@@ -600,7 +600,7 @@
   </div>
 
   <div class="work-box" data-status="under-review">
-    <h4>“Social Media or Websites?”: A Quantitative and Qualitative Investigation on Preferences of Customers in Bangladesh </h4>
+    <h4>“Social Media or Websites?”: A Quantitative Investigation on Preferences of Customers in Bangladesh </h4>
     <p><em>Accepted as a poster in 11th NSysS'24.</em><br/><br/>
       <b>Supervisor:</b> Dr. A.B.M. Alim Al Islam  <br/>
       <b>Research topics:</b>  Human-centered computing, Social computing, Social media, Exploratory data analysis <br/>
@@ -610,7 +610,7 @@
 
       
     </p>
-    <span class="btn btn-underReview" >Paper Under Review</span>
+    <span class="btn btn-underReview" >Paper Accepted in CHI LBW'25</span>
     <a href="https://drive.google.com/file/d/1xHZ2E2hAR20r8DcgFXHfvhBwwXcAZ8V4/view"  class="btn btn-poster" >Poster</a>
     <span class="year">July 2024-now</span>
   </div>
@@ -715,7 +715,7 @@
       <b>Data:</b> Interview transcription;  <b>My contribution: </b> I have contributed to transcription, thematic analysis and wrote the paper single-handedly. <br/>
      
     </p>
-    <span class="btn btn-underReview" >Paper Under Review</span>
+    <span class="btn btn-underReview" >Paper Accepted in CHI LBW'25</span>
     <span class="year">November 2024- Now</span>
   </div>
 
