news added of 2 paper published in chi lbw-- status changed

--- a/index.html
+++ b/index.html
@@ -600,7 +600,7 @@
     <span class="year">July 2024-now</span>
   </div>
 
-  <div class="work-box" data-status="under-review">
+  <div class="work-box" data-status="published">
     <h4>“Social Media or Websites?”: A Quantitative Investigation on Preferences of Customers in Bangladesh </h4>
     <p><em>Accepted as a poster in 11th NSysS'24.</em><br/><br/>
       <b>Supervisor:</b> Dr. A.B.M. Alim Al Islam  <br/>
@@ -707,7 +707,7 @@
   </div>
 
   
-  <div class="work-box" data-status="under-review">
+  <div class="work-box" data-status="published">
     <h4>Beyond the Blackout: Qualitative Insights and Sentiment Analysis on the Impact, Adaptation, and Design Solutions During the Recent Internet Shutdown in Bangladesh</h4>
     <p>
       <b>Supervisor:</b> Dr. A.B.M. Alim Al Islam  <br/>
