--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
                   <div class="news-section box-style ps-lg-4 d-flex flex-column justify-content-center">
                     <h3>Latest News</h3>
                     <ul>
+                       <li><span class="news-date" data-month="May 12" data-year="2025"></span> <span class="news-description">One paper got accepted in COMPASS'25.</span></li>
                       <li><span class="news-date" data-month="Feb 22" data-year="2025"></span> <span class="news-description">Two papers got accepted in CHI LBW'25.</span></li>
                       <li><span class="news-date" data-month="Jan 01" data-year="2025"></span> <span class="news-description">Got appointed in a funded project from World bank titled "Developing a Bangla-based Tool for Quantitative Data Analysis" .</span></li>
                       <li><span class="news-date" data-month="Dec 19-21" data-year="2024"></span> <span class="news-description">Attended the NSysS'24 conference in Khulna and presented poster.</span></li>
@@ -611,14 +612,14 @@
 
       
     </p>
-    <span class="btn btn-underReview" >Paper Accepted in CHI LBW'25</span>
+    <span class="btn btn-published" ><a href ="https://dl.acm.org/doi/abs/10.1145/3706599.3721209"> Paper Published in CHI LBW'25</a></span>
     <a href="https://drive.google.com/file/d/1xHZ2E2hAR20r8DcgFXHfvhBwwXcAZ8V4/view"  class="btn btn-poster" >Poster</a>
     <span class="year">July 2024-now</span>
   </div>
 
   <div class="work-box" data-status="ongoing">
     <h4>Sentiments and Resilience: Understanding the Impact of Recent Internet Shutdown in Bangladesh on Communication and Well-being  </h4>
-    <p><em>Accepted as a poster in 11th NSysS'24.</em><br/><br/>
+    <p><em>Accepted as a poster in 11th NSysS'24.</em> <em>Accepted in CHI LBW'25.</em><br/><br/>
       <b>Supervisor:</b> Dr. A.B.M. Alim Al Islam  <br/>
       <b>Research topics:</b>  Human-centered computing, Social computing, Natural Language Processing <br/>
       <b>Artifact:</b> Questionnaire; <b>Analysis: </b>  Cramer's V and thematic analysis  <b>Data:</b> Both survey and interview study; 
@@ -716,7 +717,7 @@
       <b>Data:</b> Interview transcription;  <b>My contribution: </b> I have contributed to transcription, thematic analysis and wrote the paper single-handedly. <br/>
      
     </p>
-    <span class="btn btn-underReview" >Paper Accepted in CHI LBW'25</span>
+    <span class="btn btn-published" ><a href="https://dl.acm.org/doi/abs/10.1145/3706599.3719895">Paper Published in CHI LBW'25</a></span>
     <span class="year">November 2024- Now</span>
   </div>
 
