Last change before leaving

--- a/index.html
+++ b/index.html
@@ -348,14 +348,14 @@
       </div>
 
 
-      <!-- Blog Item 3 -->
+      <!-- Blog Item 3
       <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
         <div class="blog-card">
           <img src="assets/img/blog/visa.png" class="img-fluid" alt="Blog 3">
           <h4><a href="https://docs.google.com/document/d/1DzLTdJ_WZqBTEa5KL7i546WJgmvepKFZ0hgQDMUKYUE/edit?usp=sharing" target="_blank">Visa Interview Experience</a></h4>
           <p>My visa interview experience was one of a kind. My Almighty Allah helped me throughout the process, and I was able to secure my visa without any issues.</p>
         </div>
-      </div>
+      </div> -->
 
 
  <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
