Last change before leaving from Bangladesh

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 <div class="col-lg-6">
                <p>
                 Hello, I'm <b>Ishika Tarin</b>, but you can call me <b>Ime</b>. I completed my undergraduate B.Sc. degree in the Department of Computer Science and Engineering (CSE) at the Bangladesh University of Engineering & Technology (BUET) in Dhaka, Bangladesh. <br/>
-                I am excited to share that I will be starting my <b>PhD in Computer Science</b> at the <b>University of Maryland, Baltimore County (UMBC)</b> in <b>Fall 2025</b>.  
+                I am currently pursuing a <b>PhD in Computer Science</b> at the <b>University of Maryland, Baltimore County (UMBC)</b> in <b>Fall 2025</b>.  
                 <br/><br/>
                 I am always eager to learn new things and take on new challenges. I believe that each and every moment should be enjoyed, for this youth won't come twice.  
                 <br/><br/>
@@ -234,6 +234,26 @@
       <h2>Education</h2>
     </div>
 
+
+
+    <div class="row align-items-center">
+  <div class="col-lg-4">
+    <a href="https://umbc.edu/">
+      <img src="assets/img/education/umbc.jpg" class="img-fluid edu1" alt="UMBC Education Image">
+    </a>
+  </div>
+  <div class="col-lg-8">
+    <h3 class="resume-title"><b>Doctor of Philosophy (Ph.D.)</b></h3>
+    <div class="resume-item">
+      <h4>Department of Computer Science &amp; Electrical Engineering</h4>
+      <h5>Fall 2025 - Present</h5>
+      <p><em>University of Maryland, Baltimore County (UMBC); Baltimore, Maryland, USA</em><br/><br/>
+        Awarded a fully funded Graduate Teaching Assistantship, supporting research and teaching in the CSEE Department, where I am specializing (Ph.D.) in Computer Science.</p>
+    </div>
+  </div>
+</div>
+
+
     <div class="row align-items-center">
       <div class="col-lg-4">
         <a href="https://www.buet.ac.bd/web/#/">
@@ -246,7 +266,7 @@
           <h4>Department of Computer Science &amp; Engineering</h4>
           <h5>2019 - 2024</h5>
           <p><em>Bangladesh University of Engineering &amp; Technology; Dhaka, Bangladesh</em><br/><br/>
-            In the highly competitive admission test for Bangladesh's top engineering university, I secured the 157th position among millions through a rigorous two-tier selection process, earning a place in its top-ranked CSE department, which admits only 120 students. </div>
+            In the highly competitive admission test for Bangladesh's top engineering university, I secured the <b>157th</b> position among millions through a rigorous two-tier selection process, earning a place in its top-ranked CSE department, which admits only 120 students. </div>
       </div>
     </div>
 
