--- a/index.html
+++ b/index.html
@@ -75,8 +75,7 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero">
     <div class="hero-container">
-      <h1>Ishika Tarin</h1>
-      <h2>With me in the sunflowers, under the sunshine, hope blooms.</h2>
+      <h1>Saikat Ghatak</h1>
       <h2>Welcome to my world!</h2>
       <a href="#about" class="btn-scroll scrollto" title="Scroll Down"><i class="bx bx-chevron-down"></i></a>
     </div>
