--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
   <section id="hero">
     <div class="hero-container">
       <h1>Saikat Ghatak</h1>
-      <h2>Welcome to my world!      </h2>
+      <h2>Welcome to my world!</h2>
       <a href="#about" class="btn-scroll scrollto" title="Scroll Down"><i class="bx bx-chevron-down"></i></a>
     </div>
   </section><!-- End Hero -->
@@ -88,7 +88,7 @@
       <div class="container">
     
         <div class="section-title">
-          <span>About Me</span>
+          <span>About Meee</span>
           <h2>About Me</h2>
         </div>
     
@@ -100,7 +100,7 @@
                 <!-- Paragraph Column -->
                 <div class="col-lg-6">
                <p>
-                Hello, I'm <b> saikat
+                Hello, I'm <b> test name
                 </b>, but you can call me <b>Ime</b>.
                 I am currently pursuing a <b>PhD in Computer Science</b> at the <b>University of Maryland, Baltimore County (UMBC)</b> in <b>Fall 2025</b>.  
                 I completed my undergraduate B.Sc. degree in the Department of Computer Science and Engineering (CSE) at the <b>Bangladesh University of Engineering & Technology (BUET)</b> in Dhaka, Bangladesh. <br/>
