--- a/index.html
+++ b/index.html
@@ -1312,7 +1312,7 @@ Centralized and Digitalized medical system for fast, better, accurate medical tr
       </div>
 
       <div class="col-lg-6">
-        <form id="contactForm" action="https://formspree.io/f/xblrgble" method="post" role="form" class="php-email-form">
+        <form id="contactForm" action="https://formspree.io/f/xnngaedg" method="post" role="form" class="php-email-form">
             <div class="row">
                 <div class="col-md-6 form-group">
                     <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
