--- a/index.html
+++ b/index.html
@@ -229,7 +229,6 @@ Beyond research and engineering, I’m passionate about teaching and mentoring s
     </div>
 
 
-
     <div class="row align-items-center">
       <div class="col-lg-4">
         <a href="https://www.buet.ac.bd/web/#/">
@@ -248,8 +247,8 @@ Beyond research and engineering, I’m passionate about teaching and mentoring s
 
     <div class="row align-items-center mt-4">
       <div class="col-lg-4">
-        <a href="http://www.hcc.edu.bd/">
-          <img src="assets/img/education/hcc.jfif" class="img-fluid edu1" alt="Education Image">
+        <a href="https://www.facebook.com/groups/narail.govt.victoria.college/">
+          <img src="assets/img/education/college.jfif/" class="img-fluid edu1" alt="Education Image">
         </a>
       </div>
       <div class="col-lg-8">
@@ -266,8 +265,8 @@ Beyond research and engineering, I’m passionate about teaching and mentoring s
 
     <div class="row align-items-center mt-4">
       <div class="col-lg-4">
-        <a href="https://mubc.edu.bd/">
-          <img src="assets/img/education/mubc.jfif" class="img-fluid edu1" alt="Education Image">
+        <a href="https://www.facebook.com/tularampurhighschool/">
+          <img src="assets/img/education/image.png" class="img-fluid edu1" alt="Education Image">
         </a>
       </div>
       <div class="col-lg-8">
@@ -283,8 +282,8 @@ Beyond research and engineering, I’m passionate about teaching and mentoring s
 
     <div class="row align-items-center mt-4">
       <div class="col-lg-4">
-        <a href="https://vidyamayee.coderstream.com/">
-          <img src="assets/img/education/bidya.jpg" class="img-fluid edu1" alt="Education Image">
+        <a href="https://google.com/">
+          <img src="assets/img/education/school.jfif" class="img-fluid edu1" alt="Education Image">
         </a>
       </div>
       <div class="col-lg-8">
@@ -452,7 +451,8 @@ Beyond research and engineering, I’m passionate about teaching and mentoring s
     <div class="subsection-title">
       <h3>Research Topics</h3>
     </div>
-      <div class="col-md-4 d-flex align-items-stretch mb-5 mb-lg-0">
+      <div class="row">
+        <div class="col-md-4 d-flex align-items-stretch mb-5 mb-lg-0">
         <div class="icon-box d-flex">
           <div class="icon research-icon"><i class="bx bx-camera"></i></div>
           <h4 class="title ml-3">Computer Vision</h4>
@@ -472,14 +472,16 @@ Beyond research and engineering, I’m passionate about teaching and mentoring s
           <h4 class="title ml-3">AI in Healthcare</h4>
         </div>
       </div>
-       <div class="col-md-4 d-flex align-items-stretch mb-5 mb-lg-0">
+      </div>
+
+    <div class="row">
+
+        <div class="col-md-4 d-flex align-items-stretch mb-5 mb-lg-0">
         <div class="icon-box d-flex">
           <div class="icon research-icon"><i class="bx bx-intersect"></i></div>
           <h4 class="title ml-3">Multimodal Learning</h4>
         </div>
       </div>
-
-    <div class="row">
       <div class="col-md-4 d-flex align-items-stretch mb-5 mb-lg-0">
         <div class="icon-box d-flex">
           <div class="icon research-icon"><i class="bx bx-laptop"></i></div>
@@ -493,8 +495,10 @@ Beyond research and engineering, I’m passionate about teaching and mentoring s
           <h4 class="title ml-3">Accessible Computing</h4>
         </div>
       </div>
+    </div>
 
-      <div class="col-md-4 d-flex align-items-stretch mb-5 mb-lg-0">
+    <div class="row">
+            <div class="col-md-4 d-flex align-items-stretch mb-5 mb-lg-0">
         <div class="icon-box d-flex">
           <div class="icon research-icon"><i class="bx bx-network-chart"></i></div>
           <h4 class="title ml-3">Generative AI</h4>
@@ -516,9 +520,6 @@ Beyond research and engineering, I’m passionate about teaching and mentoring s
         </div>
       </div>
     </div>
-
-  
-
 
     <!--
   <div class="subsection-title">
